--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -27,7 +27,7 @@ jobs:
         terraform_version: "1.0.0"
 
     - name: Download Plan
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@latest
       with:
         name: terraform-plan
         path: terraform
