--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -18,7 +18,7 @@ jobs:
         terraform_version: "1.0.0"
 
     - name: TFLint
-      uses: terraform-linters/tflint-action@v2
+      uses: terraform-linters/tflint-action@latest
       with:
         working_directory: terraform
         config_file: .tflint.hcl
@@ -40,7 +40,7 @@ jobs:
         TF_LOG: "ERROR"
 
     - name: Upload Plan
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@latest
       with:
         name: terraform-plan
         path: terraform/tfplan
