--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -28,14 +28,14 @@ jobs:
       working-directory: terraform
 
     - name: Run TFSec
-      uses: aquasecurity/tfsec@v1
+      uses: aquasecurity/tfsec-action@latest
       with:
         working_dir: terraform
         fail_on_violations: true
         skip_check: "check:tfsec:aws:ec2:EnsureEC2InstanceIsInVPC"
 
     - name: Run TFLint
-      uses: terraform-linters/tflint-action@v2
+      uses: terraform-linters/tflint-action@latest
       with:
         working_directory: terraform
         config_file: .tflint.hcl
