--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -40,7 +40,7 @@ jobs:
         TF_LOG: "ERROR"
 
     - name: Upload Plan
-      uses: actions/upload-artifact@latest
+      uses: actions/upload-artifact@v4.2.1
       with:
         name: terraform-plan
         path: terraform/tfplan
