--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -23,19 +23,16 @@ jobs:
       run: terraform fmt -check
       working-directory: terraform
 
+    - name: Terraform Init
+      run: terraform init -backend=false
+      working-directory: terraform
+
     - name: Terraform Validate
       run: terraform validate
       working-directory: terraform
 
-    - name: Run TFSec
-      uses: aquasecurity/tfsec-action@v1.0.3
-      with:
-        working_dir: terraform
-        fail_on_violations: true
-        skip_check: "check:tfsec:aws:ec2:EnsureEC2InstanceIsInVPC"
-
     - name: Run TFLint
-      uses: terraform-linters/tflint-action@latest
+      uses: terraform-linters/tflint-action@v3
       with:
         working_directory: terraform
         config_file: .tflint.hcl
