--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -34,6 +34,10 @@ jobs:
     - name: Setup TFLint
       uses: terraform-linters/setup-tflint@v1
 
+    - name: Initialize TFLint
+      run: tflint --init
+      working-directory: terraform
+
     - name: Run TFLint
       run: tflint --config .tflint.hcl
       working-directory: terraform
