fix: update workflow to trigger after Terraform Apply

--- a/.github/workflows/deploy-weather-app.yml
+++ b/.github/workflows/deploy-weather-app.yml
@@ -1,8 +1,9 @@
 name: Deploy Weather App
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["Terraform Apply"]
+    types: [completed]
 
 permissions:
   contents: read
@@ -32,6 +33,8 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        auth-type: SERVICE_PRINCIPAL
 
     - name: Login to ACR
       run: |
